update jmstudio to vlc in multicast

--- a/5 Multicast and realtime service/Multicast and realtime service.tex
+++ b/5 Multicast and realtime service/Multicast and realtime service.tex
@@ -306,7 +306,7 @@ Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
     What is the use of the TTL threshold in the router interface?
 
     \section*{Multicast video streaming exercise}
-    In the following exercise, we use \textbf{jmstudio} for video streaming.
+    In the following exercise, we use \textbf{vlc} for video streaming.
     The routers and hosts have the same configurations as in Fig. 7.14.
 
     \section{Multicast Real-Time Video}
