--- a/2 TCP/TCP and its applications.tex
+++ b/2 TCP/TCP and its applications.tex
@@ -144,7 +144,7 @@
     \begin{itemize}
     	\setlength{\itemindent}{30pt}
         \item [mininet>] \textbf{sudo mn}
-        \item [hint:] you can add link delay to see network process and have better experience. command: \textbf{sudo mn $\cdots$ --link tc,delay=10ms}  
+        \item [hint:] you can add link delay to see network process and have better experience. command: \textbf{sudo mn $\cdots$ {-}{-}link tc,delay=10ms}  
     \end{itemize}
 
 \section*{Telnet terminal}
@@ -237,11 +237,11 @@
 
     %\pagebreak
 \section*{Link Up and Down}
-    Issue following commands:
+    Create topology with 100 ms delay for each link and then following below steps:
     \begin{itemize}
     	\item [\texttt{h2>}] \textbf{socket -s 8888}
     	\item [\texttt{h1>}] \textbf{wireshark \&}
-        \item [\texttt{h1>}] \textbf{socket -i -n100000} \textit{10.0.0.2} \textbf{8888}
+        \item [\texttt{h1>}] \textbf{socket -i -n1000} \textit{10.0.0.2} \textbf{8888}
     \end{itemize}
     While the sender is injecting data segments into the network, disconnect the cable connecting the sender to the hub for about ten seconds. \\
     After observing several retransmissions, reconnect the cable:
