update lab name

--- a/0 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/0 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -37,7 +37,7 @@
 
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}}    % Horizontal rule
 
-\newcommand{\titleText}{The Web, DHCP, NTP and NAT \\ Laboratory Manual}
+\newcommand{\titleText}{Linux and TCP/IP networking \\ Laboratory Manual}
 
 \title{
 \normalsize In the name of Allah\\
